--- a/css/app.css
+++ b/css/app.css
@@ -54,6 +54,21 @@ html, body {
     height: 40px;
     background: none;
 }
+.toolbar select {
+    height: 40px;
+    padding: 4px;
+    border: 1px solid #ccc;
+    background: white;
+    color: inherit;
+}
+.toolbar button.icon {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
 .toolbar-toggle {
     position: fixed;
     top: 0;
